syntax = "proto3";

package wallet;

option go_package = "./";

// Wallet service definition
service WalletProtoService {
    rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse) {}
    rpc GetWallets(GetWalletsRequest) returns (GetWalletsResponse) {}
    rpc GetWalletByUserID(GetWalletByUserIDRequest) returns (GetWalletByUserIDResponse) {}
}

message Wallet {
    uint32 token_id = 1;
    string symbol = 2;
    string network = 3;
    double balance = 4;
}

message GetBalanceRequest {
    uint32 user_id = 1;
}

message GetBalanceResponse {
    repeated Wallet wallets = 1;
}

message GetWalletsRequest {
    uint32 user_id = 1;
}

message GetWalletsResponse {
    repeated Wallet wallets = 1;
}

message GetWalletByUserIDRequest {
    uint32 user_id = 1;
}

message GetWalletByUserIDResponse {
    repeated Wallet wallets = 1;
}
